--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
+auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
 include.path=${php.global.include.path}
-php.version=PHP_5
+php.version=PHP_82
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
